docs/api/qiskit/0.29/qiskit.circuit.library.RGate.mdx
---
title: RGate (v0.29)
description: API reference for qiskit.circuit.library.RGate in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RGate
---

# RGate

<Class id="qiskit.circuit.library.RGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/r.py" signature="RGate(theta, phi)" modifiers="class">
  Bases: `qiskit.circuit.gate.Gate`

  Rotation θ around the cos(φ)x + sin(φ)y axis.

  **Circuit symbol:**

  ```python
       ┌──────┐
  q_0: ┤ R(ϴ) ├
       └──────┘
  ```

  **Matrix Representation:**

$$
\begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}R(\theta, \phi) = e^{-i \th (\cos{\phi} x + \sin{\phi} y)} =
\begin{pmatrix}
\cos{\th} & -i e^{-i \phi} \sin{\th} \\
-i e^{i \phi} \sin{\th} & \cos{\th}
\end{pmatrix}\end{split}\end{aligned}\end{align} 
$$

  Create new r single-qubit gate.

  ## Methods Defined Here

  <span id="qiskit-circuit-library-rgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.RGate.inverse" signature="RGate.inverse()">
    Invert this gate.

    r(θ, φ)^dagger = r(-θ, φ)
  </Function>

  ## Attributes

  ### decompositions

  <Attribute id="qiskit.circuit.library.RGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.RGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.RGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.RGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.RGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.RGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

